syntax = "proto3";
package Sining.Message;
/// Gate跟Map服务器进行通讯、注册Address协议
message I_G2M_LoginAddressRequest // IRouteRequest,I_M2G_LoginAddressResponse
{
	long AddressableId = 1;		// 用来关联Address的Id,一般是账号Id或UnitId这些不会变动的
	long GateRouteId = 2;	// Gate的RouteIdId用于Map发送给客户端时需要	
}
message I_M2G_LoginAddressResponse // IRouteResponse
{
	long AddressableId = 1;
}